--- a/Article.API/appsettings.json
+++ b/Article.API/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=.;Database=ArticleDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+  },
+  "AppSettings": {
+    "SuperAdminEmail": "superadmin@gmail.com",
+    "SuperAdminPassword": "SuperAdmin@123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
