#solved insertion bug

--- a/Article.API/appsettings.json
+++ b/Article.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnectionString": "Server=.;Database=ArticleDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+    "DefaultConnectionString": "Server=DESKTOP-QO16116;Database=ArticleDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
   },
   "AppSettings": {
     "SuperAdminEmail": "superadmin@gmail.com",
